--- a/assets/styles/partner.scss
+++ b/assets/styles/partner.scss
@@ -136,7 +136,9 @@ h3{
     flex-direction: row;
     justify-content: space-between;
 
-
+    .ac-closing, .md-closing{
+      cursor: pointer;
+    }
   }
 
   .modal-p{
@@ -166,13 +168,10 @@ h3{
   display: none;
 }
 
-
-
 .closing:hover,
 .closing:focus {
   color: black;
   text-decoration: none;
-  cursor: pointer;
 }
 
 #my-accordion{
@@ -328,6 +327,22 @@ h3{
   }
 }
 
+.btn-confirm{
+  background-color: #4c99cd;
+  border: solid 1px rgb(66, 148, 203);
+
+  &:hover{
+    background-color: #2c70a0;
+    border: solid 1px #2c70a0;
+  }
+
+}
+
+
+.form-check-input:checked {
+  background-color: #4c99cd;
+  border-color: #4c99cd;
+}
 
 @media screen and (max-width: 992px) {
 
