--- a/assets/styles/partners.scss
+++ b/assets/styles/partners.scss
@@ -105,9 +105,15 @@ h2{
     justify-content: space-between;
     height: inherit;
 
+    a{
+      text-decoration: none;
+    }
+
     h3{
       color: #2c70a0;
       font-weight: 700;
+
+
     }
 
     div{
