--- a/templates/admin/admin_show_structure.html.twig
+++ b/templates/admin/admin_show_structure.html.twig
@@ -14,12 +14,11 @@
     {{ encore_entry_script_tags('structure') }}
 {% endblock%}
 
-
 {% block body %}
 
     {% include 'Partials/_admin_navBar.html.twig' %}
 <div class="main-container">
-    <a  class ='return-btn' href="{{ app.request.headers.get('referer') }}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 256 512"><!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M192 448c-8.188 0-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25L77.25 256l137.4 137.4c12.5 12.5 12.5 32.75 0 45.25C208.4 444.9 200.2 448 192 448z"/></svg>
+    <a  class ='return-btn' href="{{ path('app_admin_show_partner', {slug: structure.partner.slug }) }}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 256 512"><!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M192 448c-8.188 0-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25L77.25 256l137.4 137.4c12.5 12.5 12.5 32.75 0 45.25C208.4 444.9 200.2 448 192 448z"/></svg>
         Retour</a>
     <h2>Structure - {{ structure.address}} </h2>
 
@@ -36,9 +35,11 @@
         </div>
         <div class="partner-btns">
             {% if structure.user.isActive == true %}
-                <a href="{{ path('app_admin_enable_user', {id: structure.user.id }) }}" class="btn btn-primary">Désactiver</a>
+                <button type="button" class="btn btn-primary btn-confirm" id="status-modal" >Désactiver</button>
+
             {% elseif structure.user.isActive == false %}
-                <a href="{{ path('app_admin_enable_user', {id: structure.user.id }) }}" class="btn btn-success">Activer</a>
+                <button type="button" class="btn btn-success" id="status-modal" >Activer</button>
+
             {% endif %}
             <a href="#" class="btn btn-danger">Supprimer</a>
         </div>
@@ -60,7 +61,7 @@
                 <button type="submit" class="btn" id="submit-modify">Enregistrer les modifications</button>
                 {{ form_end(structurePermissionsForm) }}
             </form>
-            <button type="button" class="btn btn-primary" id="open-str-modal" >Enregistrer les modifications</button>
+            <button type="button" class="btn btn-primary btn-confirm" id="open-str-modal" >Enregistrer les modifications</button>
         </div>
     </div>
     <!-- The Modal -->
@@ -69,7 +70,7 @@
         <div class="modal-buttons">
             <div class="closing">
                 <h4>Modification des permissions</h4>
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#aaa" class="bi bi-x" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#aaa" class="closing-svg bi bi-x" viewBox="0 0 16 16">
                     <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
                 </svg>
             </div>
@@ -77,9 +78,43 @@
                 <p>Etes-vous sûr de vouloir modifier les permissions de cette structure ? </p>
             </div>
             <div class="modal-buttons-div">
-                <button class="btn btn-outline-secondary">Annuler</button>
-                <button class="btn btn-primary" id="confirm-str-btn">Confirmer</button>
+                <button class="btn btn-outline-secondary cancel-mod">Annuler</button>
+                <button class="btn btn-primary  btn-confirm" id="confirm-str-btn">Confirmer</button>
             </div>
+        </div>
+    </div>
+    <div id="activate-modal" class="confirm-modal">
+        <!-- Contenu de la modal -->
+        <div class="modal-buttons">
+            {% if structure.user.isActive == true %}
+                <div class="closing">
+                    <h4>Désactiver la structure</h4>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#aaa" class="ac-closing bi bi-x" viewBox="0 0 16 16">
+                        <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                    </svg>
+                </div>
+                <div class="modal-p">
+                    <p>Etes-vous sûr de vouloir désactiver cette structure? </p>
+                </div>
+                <div class="modal-buttons-div">
+                    <button class="btn btn-outline-secondary cancel-btn">Annuler</button>
+                    <a href="{{ path('app_admin_enable_user', {id: structure.user.id }) }}" class="btn btn-primary btn-confirm">Confirmer</a>
+                </div>
+            {% elseif structure.user.isActive == false %}
+                <div class="closing">
+                    <h4>Activer la structure</h4>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#aaa" class="ac-closing bi bi-x" viewBox="0 0 16 16">
+                        <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                    </svg>
+                </div>
+                <div class="modal-p">
+                    <p>Etes-vous sûr de vouloir activer cette structure? </p>
+                </div>
+                <div class="modal-buttons-div">
+                    <button class="btn btn-outline-secondary cancel-btn">Annuler</button>
+                    <a href="{{ path('app_admin_enable_user', {id: structure.user.id }) }}" class="btn btn-success btn-confirm">Confirmer</a>
+                </div>
+            {% endif %}
         </div>
     </div>
 </div>
