--- a/templates/structure/structure.html.twig
+++ b/templates/structure/structure.html.twig
@@ -17,7 +17,9 @@
 
 {% block body %}
     {% include 'Partials/_navBar.html.twig' %}
+    {% if is_granted('ROLE_STRUCTURE') %}
 <div class="main-container">
+    {% if structure.user.isActive == true %}
     <div class="main-content-div">
         <div class="main-content">
             <svg class="gym-logo" width="40" height="40" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M112 96c0-17.7 14.3-32 32-32h16c17.7 0 32 14.3 32 32V224v64V416c0 17.7-14.3 32-32 32H144c-17.7 0-32-14.3-32-32V384H64c-17.7 0-32-14.3-32-32V288c-17.7 0-32-14.3-32-32s14.3-32 32-32V160c0-17.7 14.3-32 32-32h48V96zm416 0v32h48c17.7 0 32 14.3 32 32v64c17.7 0 32 14.3 32 32s-14.3 32-32 32v64c0 17.7-14.3 32-32 32H528v32c0 17.7-14.3 32-32 32H480c-17.7 0-32-14.3-32-32V288 224 96c0-17.7 14.3-32 32-32h16c17.7 0 32 14.3 32 32zM416 224v64H224V224H416z"/></svg>
@@ -80,5 +82,13 @@
             </div>
         </div>
     </div>
+    {% elseif structure.user.isActive == false %}
+        <div class="disabled-div">
+            <h2>Fitness Club<br>{{ structure.partner.name }} - {{ structure.address }}</h2>
+            <p>Votre compte a été désactivé.</p>
+            <p>Pour en savoir plus, contactez votre gestionnaire.</p>
+        </div>
+    {% endif %}
 </div>
+    {% endif%}
 {% endblock %}
