--- a/assets/styles/panel.scss
+++ b/assets/styles/panel.scss
@@ -14,6 +14,7 @@
   border: solid 1px lightgray;
   padding: 1rem 2rem;
   margin-bottom: 1.5rem;
+  border-radius: 5px;
 
   //&:hover{
   //  box-shadow: 0 0 10px 2px lightgray;
@@ -47,6 +48,7 @@ h3{
   flex-direction: column;
   align-items: start;
   justify-content: space-between;
+border-radius: 5px;
 }
 
 .dashboard-title{
@@ -75,10 +77,11 @@ h3{
   flex-direction: column;
   align-items: start;
   justify-content: space-between;
+  border-radius: 5px;
 
   h4{
     color: #2c70a0;
-    font-weight: 700;
+    font-weight: 600;
     font-size: 1.4rem;
   }
 
