--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -21,7 +21,7 @@
             <div class="logo-img"></div>
             <form method="post">
                 {% if error %}
-                    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                    <div class="alert alert-danger">Identifiants invalides</div>
                 {% endif %}
 
                 {% if app.user %}
