--- a/assets/styles/partner.scss
+++ b/assets/styles/partner.scss
@@ -342,7 +342,7 @@ h3{
 
 }
 
-.bouton-jaune{
+.bouton-bleu{
   color: white;
   background-color: #e9c949;
   border: solid 1px #e9c949;
@@ -362,7 +362,7 @@ a{
   }
 }
 
-.bouton-jaune-b{
+.bouton-bleu-b{
   color: #e9c949;
   background-color: white;
   border: solid 1px #e9c949;
@@ -436,12 +436,12 @@ a{
     margin-top: 2rem;
     flex-direction: column;
 
-    .bouton-jaune{
+    .bouton-bleu{
       width: 100%;
       margin-bottom: .5rem;
     }
 
-    .bouton-jaune-b{
+    .bouton-bleu-b{
       width: 100%;
       margin-left: 0;
       text-align: center;
