--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -17,10 +17,10 @@
 {% block body %}
     {% include 'Partials/_admin_navBar.html.twig' %}
 <div class="main-container">
-    <div class="white-card dashboard-content">
+    <div class="dashboard-content">
         <div class="dashboard-title">
         <h3>Tableau de bord</h3>
-        <div class="dashboard-border"></div>
+        <!--<div class="dashboard-border"></div>-->
         </div>
         <div class="dashboard-sections">
             <div class="dashboard-users">
