--- a/assets/styles/adminNavBar.scss
+++ b/assets/styles/adminNavBar.scss
@@ -6,14 +6,19 @@
   height: 8vh;
   width: 100vw;
   padding: 0 2rem;
-  background-color: #112B3C /* #205375 */;
+  background-color: #112b3c /* #112B3C */;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   color: #EEEEEE;
-  border-bottom: solid 1px #0a1e2a;
+  border-bottom: 1px solid #0a1e2a;
   z-index: 1;
+  box-shadow: 5px 3px 10px 2px rgba(10, 29, 41, 0.4);
+
+  h1{
+    color: white;
+  }
 
   .logo{
 
@@ -38,6 +43,7 @@
     padding: 5px 1rem;
     font-size: 0.8rem;
     font-weight: 600;
+    border-radius: 17px;
 
     color: #378cc8;
 
@@ -60,13 +66,15 @@
   height: 92vh;
   width: 20vw;
   padding-top: 3rem;
-  background-color: #112B3C;
-  border-right: solid 1px lightgray;
+  background-color: #112b3c;
+  border-right: 1px solid #0a1e2a;
   display: flex;
   flex-direction: column;
   justify-content: start;
   align-items: center;
   color: #EEEEEE;
+  z-index: 2;
+  box-shadow: 3px 2px 10px 2px rgba(10, 29, 41, 0.4);
 
 }
 
@@ -141,7 +149,7 @@ svg{
   border: none;
   outline: none;
   line-height: 3rem;
-  background-color: #112B3C;
+  background-color: #112b3c /*#112B3C*/;
   font-size: .9rem;
   color: #4c99cd;
 
@@ -149,7 +157,7 @@ svg{
 
 .nav-active {
   background-color: #1c4763;
-  border-bottom: solid 1px #163950;
+  border-bottom: 1px solid #163950;
   color: #d7e8f4;
 }
 
@@ -213,7 +221,7 @@ svg{
       border: none;
       font-weight: 600;
       padding: 0;
-      color: #d7e8f4;
+      color: #4c99cd;
 
       &:hover{
         border: none;
@@ -229,7 +237,7 @@ svg{
     top: 8vh;
     width: 300px;
     height: 92vh;
-    background-color: #112B3C;;
+    background-color: #112b3c;
     transform: translateX(-300px);
     transition: transform 0.7s ;
     z-index: 1;
@@ -279,7 +287,7 @@ svg{
       margin-bottom: 5px;
 
       svg{
-        color: #d7e8f4;
+        color: #4c99cd;
       }
     }
   }
