--- a/assets/styles/panel.scss
+++ b/assets/styles/panel.scss
@@ -5,12 +5,12 @@
   left: 20%;
   width: 80%;
   min-height: 92%;
-  padding: 1rem;
+  padding: 2rem;
   padding-bottom: 0;
 }
 
 .white-card{
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.92);
   border: solid 1px lightgray;
   padding: 1rem 2rem;
   margin-bottom: 1.5rem;
@@ -48,7 +48,8 @@ h3{
   flex-direction: column;
   align-items: start;
   justify-content: space-between;
-border-radius: 5px;
+  border-radius: 7px;
+
 }
 
 .dashboard-title{
