--- a/assets/styles/unverified.scss
+++ b/assets/styles/unverified.scss
@@ -5,29 +5,50 @@
   left: 20%;
   width: 80%;
   min-height: 92%;
-  padding: 3rem 6rem;
+  padding: 3rem;
 }
 
 .white-card{
-  background-color: white;
-  border: solid 1px lightgray;
-  padding: 1rem 2rem;
-  margin-bottom: 1.5rem;
+  background-color: hsla(0,0%,100%,.92);
+  border: 1px solid lightgray;
+  border-radius: 7px;
+  padding: 1rem 3rem;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  margin: 2rem auto;
 
-  &:hover{
-    box-shadow: 0 0 10px 2px lightgray;
 
-  }
 
 }
 
 h2{
-  font-weight: 600;
-  margin-bottom: 1.5rem;
+    color: #3585bb;
+    text-align: center;
+    font-weight: 600;
+    font-size: 1.2rem;
+    margin-bottom: 1.5rem;
 }
 
 .td-cell {
   vertical-align: middle;
+
+  .btn{
+    width: 100%;
+    line-height: 1.2rem;
+    border-radius: 17px;
+    background-color: #1e90ff;
+    border: solid 1px #1e90ff;
+
+
+    &:hover{
+      background-color: #0066cc;
+      border: solid 1px #0066cc;
+    }
+
+    &:focus{
+      background-color: #0066cc;
+    }
+
+  }
 }
 
 th{
@@ -40,6 +61,8 @@ th{
 
 .btn-th{
   width: 25%;
+
+
 }
 
 
