--- a/templates/admin/admin_show_partners.html.twig
+++ b/templates/admin/admin_show_partners.html.twig
@@ -18,9 +18,9 @@
     {% include 'Partials/_admin_navBar.html.twig' %}
 
 <div class="main-container">
-    <h2>Liste des partenaires</h2>
-
     <div class="filter-bar">
+        <h2>Liste des partenaires</h2>
+        <div class="search-bar">
         <input type="text" class="form-control" id="search-bar" placeholder=" Rechercher un partenaire...">
 
         <form id="filters">
@@ -32,6 +32,7 @@
             </select>
 
         </form>
+        </div>
     </div>
 
     <div id="content">
