--- a/assets/styles/partners.scss
+++ b/assets/styles/partners.scss
@@ -67,6 +67,12 @@ h2{
   }
 }
 
+select{
+  border-radius: 5px;
+  padding: .2rem;
+  border: solid 1px gray;
+}
+
 .partners-content{
   border: solid 1px lightgray;
   margin: 2rem auto;
@@ -86,6 +92,7 @@ h2{
   height: 160px;
   margin: 1rem auto;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  border-radius: 15px;
 
 
   .person-svg{
@@ -100,6 +107,7 @@ h2{
     align-items: end;
     justify-content: center;
     padding-bottom: 1rem;
+    border-radius: 15px 0 0 15px ;
 
 
     div{
@@ -123,6 +131,7 @@ h2{
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  border-radius: 0 15px 15px 0;
 
   .partner-titles{
     display: flex;
@@ -273,6 +282,7 @@ h2{
   .partners-card .person-svg{
     width: 100%;
     min-height: 180px;
+    border-radius: 15px 15px 0 0;
   }
 
   .partner-card{
@@ -280,6 +290,7 @@ h2{
     flex-direction: column;
     padding: 1rem;
     min-height: 235px;
+    border-radius: 0 0 15px 15px;
   }
 
   .partner-card .partner-titles {
